--- a/class-3/index.html
+++ b/class-3/index.html
@@ -124,29 +124,29 @@
 
 
 
-    // let vowel = prompt("");
-    // switch (true) {
+    let vowel = prompt("");
+    switch (true) {
 
-    //     case vowel == "a" || vowel == " A":
-    //         console.log("it is vowel");
-    //         break;
-    //     case vowel == "e" || vowel == " E":
-    //         console.log("it is vowel")
-    //         break;
-    //     case vowel == "i" || vowel == "I":
-    //         console.log("it is vowel");
-    //         break;
-    //     case vowel == "o" || vowel == " O":
-    //         console.log("it is vowel");
-    //         break;
-    //     case vowel == "u" || vowel == " U":
-    //         console.log("it is vowel");
-    //         break;
+        case vowel == "a" || vowel == " A":
+            console.log("it is vowel");
+            break;
+        case vowel == "e" || vowel == " E":
+            console.log("it is vowel")
+            break;
+        case vowel == "i" || vowel == "I":
+            console.log("it is vowel");
+            break;
+        case vowel == "o" || vowel == " O":
+            console.log("it is vowel");
+            break;
+        case vowel == "u" || vowel == " U":
+            console.log("it is vowel");
+            break;
 
 
-    //     default:
-    //         console.log("it is not-vowel");
-    // }
+        default:
+            console.log("it is not-vowel");
+    }
 
 
 
