--- a/class-6/index.html
+++ b/class-6/index.html
@@ -444,6 +444,74 @@ document.write(`
 //         </tbody>
 //     </table>`
 // )
+
+
+
+// let i = 0;
+// while (i < 5) {
+//   console.log(i);
+//   i++;
+// }
+
+// let fruits = ["আপেল", "কলা", "তরমুজ"];
+// fruits.forEach(function(fruit) {
+//   console.log(fruit);
+// });
+
+
+// let person = { name: "জন", age: 25 };
+// let { name, age } =person;
+// // let { name, age } = { name: "জন", age: 25 };
+// console.log(name); 
+// console.log(age);
+
+// function greet(name) {
+//   return "হ্যালো, " + name;
+// }
+
+// console.log(greet("Maria"));
+
+// function greet(name) {
+//   return "হ্যালো, " + name;
+// }
+
+// console.log(greet("জন"));
+
+
+// let age = 20;
+// let hasPermission = true;
+// if (age >= 18) {
+//   if (!hasPermission) {
+//     console.log("আপনার প্রবেশাধিকার অনুমোদিত");
+//   } else {
+//     console.log("আপনার প্রবেশাধিকার অস্বীকৃত");
+//   }
+// } else {
+//   console.log("আপনি প্রাপ্তবয়স্ক নন।");
+// }
+
+//switch case 
+// let day = 2;
+// switch (day) {
+//   case 1:
+//     console.log("রবিবার");
+//     break;
+//   case 2:
+//     console.log("সোমবার");
+//     break;
+//   case 3:
+//     console.log("মঙ্গলবার");
+//     break;
+//   default:
+//     console.log("অজানা দিন");
+// }
+
+
+let numbers = [10, 20, 30];
+for (let value of numbers) {
+  console.log(value);
+}
+
     </script>
     
 
